--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
-  "short_name": "React App",
+  "short_name": "HS Deck Builder",
   "name": "Create React App Sample",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "description":"adsf"
 }
